[gd_scene load_steps=9 format=3 uid="uid://80q74pk3rmx1"]

[ext_resource type="Texture2D" uid="uid://xj58x63vdis2" path="res://icons/phosphor/eraser-duotone.svg" id="1_qk125"]
[ext_resource type="Theme" uid="uid://bp7ntkss4y7ms" path="res://scenes/theme.tres" id="1_x65cp"]
[ext_resource type="Texture2D" uid="uid://bpcldmwp6pkqc" path="res://icons/phosphor/pen-duotone.svg" id="2_08u8w"]
[ext_resource type="Script" path="res://scenes/tools.gd" id="2_hktuk"]
[ext_resource type="PackedScene" uid="uid://cq1hokpb34037" path="res://scenes/key_hint.tscn" id="4_6jvjk"]
[ext_resource type="Texture2D" uid="uid://cq6kwu8bsd3r6" path="res://icons/phosphor/eyedropper-duotone.svg" id="6_1jqg8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glc07"]
bg_color = Color(0.598309, 0.598309, 0.598309, 0)
border_width_left = 1
border_width_bottom = 2
border_color = Color(0.598309, 0.598309, 0.598309, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83hf3"]
bg_color = Color(0.598309, 0.598309, 0.598309, 0)
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.598309, 0.598309, 0.598309, 1)

[node name="Toolbar" type="MarginContainer"]
theme = ExtResource("1_x65cp")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 5
script = ExtResource("2_hktuk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="PenAndEraser" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Buttons" type="HBoxContainer" parent="HBoxContainer/PenAndEraser"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="PenPanel" type="PanelContainer" parent="HBoxContainer/PenAndEraser/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ToolPanelInactive"

[node name="Pen" type="Button" parent="HBoxContainer/PenAndEraser/Buttons/PenPanel"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Pen"
focus_mode = 0
theme_type_variation = &"IconButton"
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
icon = ExtResource("2_08u8w")

[node name="EraserPanel" type="PanelContainer" parent="HBoxContainer/PenAndEraser/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ToolPanelInactive"

[node name="Eraser" type="Button" parent="HBoxContainer/PenAndEraser/Buttons/EraserPanel"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Eraser"
focus_mode = 0
theme_type_variation = &"IconButton"
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
icon = ExtResource("1_qk125")

[node name="KeyHint" type="HBoxContainer" parent="HBoxContainer/PenAndEraser"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PenAndEraser/KeyHint"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2

[node name="LeftBracket" type="Panel" parent="HBoxContainer/PenAndEraser/KeyHint/MarginContainer"]
custom_minimum_size = Vector2(10, 9)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_glc07")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/PenAndEraser/KeyHint"]
layout_mode = 2

[node name="PenHint" parent="HBoxContainer/PenAndEraser/KeyHint/CenterContainer" instance=ExtResource("4_6jvjk")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/PenAndEraser/KeyHint"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2

[node name="RightBracket" type="Panel" parent="HBoxContainer/PenAndEraser/KeyHint/MarginContainer2"]
custom_minimum_size = Vector2(10, 9)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_83hf3")

[node name="ColorPickerBox" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ColorPickerPanel" type="PanelContainer" parent="HBoxContainer/ColorPickerBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ToolPanelInactive"

[node name="ColorPicker" type="Button" parent="HBoxContainer/ColorPickerBox/ColorPickerPanel"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Pen"
focus_mode = 0
theme_type_variation = &"IconButton"
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
icon = ExtResource("6_1jqg8")

[node name="ColorPickerHint" parent="HBoxContainer/ColorPickerBox" instance=ExtResource("4_6jvjk")]
unique_name_in_owner = true
layout_mode = 2
